# chatbot

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  INTERVIEW_BACKEND.md  Makefile  README.md  SECURITY.md  docker-compose.backend.yml  docker-compose.monitoring.yml  docker-compose.yml  load-test.py  test-ui.html  test-websocket.html
.github/actions/build-push-image/: action.yml
.github/workflows/: backends.cd.yml
ai-consumer/: .env.example  Dockerfile  main.py  pyproject.toml
ai-consumer/ai_consumer/: config.py  dependencies.py  main.py
ai-consumer/tests/: test_unit.py
common/kafka-helper/src/kafka_helper/: __init__.py
common/logger/: pyproject.toml
common/logger/src/logger/: __init__.py
common/metrics/src/metrics/: __init__.py  ai_consumer.py  message_relay.py
common/redis-helper/: pyproject.toml
common/redis-helper/src/redis_helper/: __init__.py
data/: resume-data.example.json  resume-data.json  resume-data.txt
grafana/dashboards/: nova-prime-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
infra/docker/: docker-compose.backend.ghcr.yml  docker-compose.backend.yml  docker-compose.dependencies.yml  docker-compose.monitoring.yml  docker-compose.yml
infra/nginx/: chat.html  nginx.conf  test-ui.html
infra/prometheus/: prometheus.yml
message-relay/: .env.example  Dockerfile  main.py  pyproject.toml
message-relay/message_relay/: config.py  dependencies.py  main.py
message-relay/tests/: test_unit.py
nginx/: nginx.conf
prometheus/: prometheus.yml
scripts/: README.md  json_to_txt.py  test-single-connection.py
src/ai-consumer/: .env.example  Dockerfile  pyproject.toml
src/ai-consumer/ai_consumer/: config.py  dependencies.py  main.py  rag_helper.py
src/ai-consumer/tests/: conftest.py  test_unit.py
src/common/kafka-helper/: pyproject.toml
src/common/knowledge-base/: pyproject.toml
src/common/knowledge-base/knowledge_base/: __init__.py  knowledge_base.py
src/common/logger/src/logger/: __init__.py
src/common/metrics/: README.md  pyproject.toml
src/common/metrics/src/metrics/: __init__.py  ai_consumer.py  message_relay.py  websocket.py
src/common/redis-helper/src/redis_helper/: __init__.py
src/message-relay/: .env.example  Dockerfile  pyproject.toml
src/message-relay/message_relay/: config.py  dependencies.py  main.py
src/message-relay/tests/: test_unit.py
src/websocket-server/: .env.example  Dockerfile  log-config.json  pyproject.toml
src/websocket-server/tests/: conftest.py  test_integration.py  test_unit.py
src/websocket-server/websocket_server/: config.py  middleware.py  router.py  schemas.py  util.py
src/websocket-server/websocket_server/handlers/: message_handler.py  websocket_handler.py
src/websocket-server/websocket_server/middleware/: __init__.py
src/websocket-server/websocket_server/rate_limiting/: __init__.py  rate_limiter.py
src/websocket-server/websocket_server/security/: __init__.py  input_validator.py  turnstile.py
websocket-server/: .env.example  Dockerfile  config.py  dependencies.py  main.py  middleware.py  pyproject.toml
websocket-server/tests/: conftest.py  test_integration.py  test_unit.py
websocket-server/websocket_server/: config.py  connection_manager.py  dependencies.py  kafka_helper.py  main.py  middleware.py  redis_helper.py  router.py  schemas.py  util.py  ws_connection_manager.py
websocket-server/websocket_server/handlers/: exception_handler.py  message_handler.py  websocket_handler.py
websocket-server/websocket_server/services/: message_handler.py  websocket_manager.py
