[project]
name = "ai-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kafka-python>=2.2.15",
    "openai>=2.1.0",
    "logger",
    "pydantic-settings>=2.11.0",
    "lz4>=4.4.4",
    "tenacity>=9.1.2",
    "metrics",
]

[tool.uv.sources]
logger = { path = "../common/logger" }
metrics = { path = "../common/metrics" }
