[project]
name = "ai-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.1.0",
    "logger",
    "pydantic-settings>=2.11.0",
    "tenacity>=9.1.2",
    "metrics",
    "kafka-helper",
]

[tool.uv.sources]
metrics = { path = "../common/metrics" }
kafka-helper = { path = "../common/kafka-helper" }
logger = { path = "../common/logger" }
