[project]
name = "websocket-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "kafka-helper",
    "logger",
    "metrics",
    "pydantic-settings>=2.11.0",
    "redis-helper",
    "uvicorn[standard]>=0.37.0",
]

[tool.uv.sources]
logger = { path = "../common/logger" }
metrics = { path = "../common/metrics" }
kafka-helper = { path = "../common/kafka-helper" }
redis-helper = { path = "../common/redis-helper" }
