[project]
name = "websocket-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "kafka-helper",
    "logger",
    "metrics",
    "pydantic-settings>=2.11.0",
    "redis-helper",
    "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.uv.sources]
metrics = { path = "../common/metrics" }
kafka-helper = { path = "../common/kafka-helper" }
logger = { path = "../common/logger" }
redis-helper = { path = "../common/redis-helper" }
