[project]
name = "logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Şahin Akkaya", email = "sahin@sahinakkaya.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "python-json-logger>=3.3.0",
    "rich>=14.1.0",
]

[project.scripts]
logger = "logger:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
