[project]
name = "ai-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.1.0",
    "logger",
    "pydantic-settings>=2.11.0",
    "tenacity>=9.1.2",
    "kafka-helper",
    "redis-helper",
    "numpy>=2.3.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]


[tool.uv.sources]
kafka-helper = { path = "../common/kafka-helper" }
logger = { path = "../common/logger" }
redis-helper = { path = "../common/redis-helper" }
