[project]
name = "message-relay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.11.0",
    "logger",
    "redis-helper",
    "kafka-helper",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.uv.sources]
kafka-helper = { path = "../common/kafka-helper" }
redis-helper = { path = "../common/redis-helper" }
logger = { path = "../common/logger" }
