[project]
name = "message-relay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.11.0",
    "logger",
    "redis-helper",
    "kafka-helper",
]


[tool.uv.sources]
kafka-helper = { path = "../common/kafka-helper" }
redis-helper = { path = "../common/redis-helper" }
logger = { path = "../common/logger" }
