[project]
name = "metrics"
version = "0.1.0"
description = "Common Prometheus metrics for Nova Prime services"
readme = "README.md"
authors = [
    { name = "Şahin Akkaya", email = "sahin@sahinakkaya.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "prometheus-client>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
